--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,6 +5,7 @@
   "version": "0.2.0",
   "configurations": [
     {
+      "args": ["new"],
       "name": "Python: Current File",
       "type": "python",
       "request": "launch",
