--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-  "python.pythonPath": "/usr/local/bin/python3",
+  "python.pythonPath": "/Users/pavelkoryakin/anaconda3/envs/mldriver/bin/python",
   "python.testing.unittestArgs": [
     "-v",
     "-s",
