--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "GAMMA": 0.90,
-    "LR": 0.00005,
+    "LEARNING_RATE": 0.00005,
     "FRAMES_LOOKBACK": 4,
     "FRAMES_SKIP": 5,
     "BUFFER_SIZE": 16,
