--- a/config.json
+++ b/config.json
@@ -1,10 +1,12 @@
 {
-    "GAMMA": 0.95,
-    "LEARNING_RATE": 0.00002,
+    "GAMMA": 0.99,
+    "LEARNING_RATE": 0.00005,
     "FRAMES_LOOKBACK": 3,
-    "FRAMES_SKIP": 5,
+    "FRAMES_SKIP": 3,
     "REPLAY_BUFFER_SIZE": 8,
     "VALUE_LOSS_K":0.5,
     "ENTROPY_K":0.01,
-    "USE_DIFF": true
+    "USE_DIFF": true,
+    "REWARD": 1,
+    "PENALTY": -15
 }
