--- a/config.json
+++ b/config.json
@@ -1,12 +1,12 @@
 {
-    "GAMMA": 0.90,
+    "GAMMA": 0.99,
     "LEARNING_RATE": 0.00005,
-    "FRAMES_LOOKBACK": 3,
-    "FRAMES_SKIP": 3,
+    "FRAMES_LOOKBACK": 2,
+    "FRAMES_SKIP": 4,
     "REPLAY_BUFFER_SIZE": 8,
     "VALUE_LOSS_K":0.5,
     "ENTROPY_K":0.01,
-    "USE_DIFF": true,
+    "USE_DIFF": false,
     "REWARD": 1,
     "PENALTY": -15
 }
